# Slicer3DeepFL

./: .gitignore  CMakeLists.txt  LICENSE  README.md
AutomatedLandmarking/: AutomatedLandmarking.py  CMakeLists.txt
AutomatedLandmarking/Helpers/: __init__.py  fiducial_creation.py  landmarks_io.py  mesh_conversion.py
AutomatedLandmarking/Resources/: requirements.txt
AutomatedLandmarking/Resources/UI/: AutomatedLandmarking.ui
AutomatedLandmarking/Resources/mvcnn/: __init__.py  api.py  predict.py
AutomatedLandmarking/Resources/mvcnn/__configs/20Landmarks_25v_depth_geom/: config.json
AutomatedLandmarking/Resources/mvcnn/__configs/20Landmarks_25views/: config.json
AutomatedLandmarking/Resources/mvcnn/__configs/21Landmarks_25views/: config.json
AutomatedLandmarking/Resources/mvcnn/__configs/BU_3DFE_84Landmarks_96views_depth/: config.json
AutomatedLandmarking/Resources/mvcnn/__configs/BU_3DFE_84Landmarks_96views_geom_depth/: config.json
AutomatedLandmarking/Resources/mvcnn/__configs/DTU3D_73Landmarks_96views_depth/: config.json
AutomatedLandmarking/Resources/mvcnn/__configs/DTU3D_73Landmarks_96views_geom_depth/: config.json
AutomatedLandmarking/Resources/mvcnn/__configs/LYHM_5Landmarks_25views/: config.json
AutomatedLandmarking/Resources/mvcnn/base/: __init__.py
AutomatedLandmarking/Resources/mvcnn/data_loader/: data_loaders.py
AutomatedLandmarking/Resources/mvcnn/deepmvlm/: api.py
AutomatedLandmarking/Resources/mvcnn/logger/: __init__.py
AutomatedLandmarking/Resources/mvcnn/prediction/: predict2d.py
AutomatedLandmarking/Resources/mvcnn/utils/: __init__.py  util.py
AutomatedLandmarking/Resources/mvcnn/utils3d/: render3d.py  utils3d.py
AutomatedLandmarking/Testing/Python/: CMakeLists.txt
FaceStandardization/: CMakeLists.txt  FaceStandardization.py
FaceStandardization/Resources/: reference_landmarks.fcsv
FaceStandardization/Resources/UI/: FaceStandardization.ui
